--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background: linear-gradient( black,#ff0000 35% ,#ffcc00);
 }
 
 .App-header {
@@ -13,8 +14,9 @@
   font-size: 1.5em;
 }
 
-.App img {
+
+/* .App img {
   height: 150px;
-  width: 150px;
-}
+  width: 140px;
+} */
 
